--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .angular/
 
 # Node modules and dependency files
-/node_modules/
+node_modules/
 /package-lock.json
 /yarn.lock
 
@@ -26,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Java
+target/
